--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <div id="coinName"></div>
+        <div class="text-center" id="coinName"></div>
       </div>
     </div>
   </div>
