fixed another parse error

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <form>
             <div class="form-group">
               <label>Max Price USD:</label>
-              <input type="text" id="maxPrice" class="form-control">
+              <input type="number" id="maxPrice" class="form-control">
             </div>
             <div class="form-group">
               <label>Min Volume: (in millions)</label>
