--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="col">
         <div class="jumbotron">
           <h1 class="text-center">AltCoinz</h1>
-          <form>
+          <form id="mForm">
             <div class="form-group">
               <label>Max Price USD:</label>
               <input type="number" id="maxPrice" class="form-control">
@@ -26,14 +26,29 @@
               <label>Min Market Cap: (in millions)</label>
               <input type="number" id="minMarketCap" class="form-control">
             </div>
-            <button class="form-control" id="submit">Submit</button>
+            <button class="form-control btn btn-warning" id="submit">Submit</button>
           </form>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <div class="text-center" id="coinName"></div>
+        <table class="table table-striped table-responsive-sm">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Symbol</th>
+              <th>Price USD</th>
+              <th>24H Volume</th>
+              <th>Market Cap</th>
+              <th>% Change 24h</th>
+              <th>% Change 7D</th>
+            </tr>
+          </thead>
+          <tbody id="mTable">
+
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
